--- a/src/main/resources/templates/languagesWithCountries.html
+++ b/src/main/resources/templates/languagesWithCountries.html
@@ -27,7 +27,7 @@
         <tbody>
         <tr th:each="language: ${languages}">
             <td th:text="${language.language}"></td>
-            <td>TODO</td>
+            <td th:text="${language.country}"></td>
         </tr>
         </tbody>
     </table>
