--- a/src/main/resources/templates/languagesWithCountries.html
+++ b/src/main/resources/templates/languagesWithCountries.html
@@ -25,14 +25,15 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="language: ${languages}">
-            <td th:text="${language.language}"></td>
-            <td th:text="${language.country}"></td>
+        <tr th:each="countryWitLanguage: ${country}">
+            <td th:text="${countryWitLanguage.language}"></td>
+            <td th:text="${countryWitLanguage.country}"></td>
         </tr>
         </tbody>
     </table>
 
 </div>
+
 
 
 </body>
